[gd_scene load_steps=4 format=3 uid="uid://bd1oo4obhy6a"]

[ext_resource type="Script" uid="uid://blga5iqjcqt7u" path="res://scripts/map.gd" id="1_0cso3"]
[ext_resource type="PackedScene" uid="uid://c15vaqbs5daq3" path="res://scenes/map_models/map_model_0.tscn" id="2_gldc4"]
[ext_resource type="AudioStream" uid="uid://cc5oapknkx7ey" path="res://resources/sfx/Computer Warble 5.wav" id="5_2klcf"]

[node name="Map" type="Node3D"]
script = ExtResource("1_0cso3")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.59838724, 8.3937025)
projection = 1
fov = 37.849285
size = 6.227

[node name="MapContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8660254, -0.5, 0, 0.5, 0.8660254, 0, 0, 0)

[node name="MapModel" parent="MapContainer" instance=ExtResource("2_gldc4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.43569916, -0.25155103)

[node name="MapRotateSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2klcf")
